<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainScreenFragment"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginTop="200dp"
        android:textColor="@color/black"
        android:padding="15dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_btn"
        android:id="@+id/singing_button"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/map_btn"
        android:id="@+id/map_button"
        android:layout_gravity="center"/>

</LinearLayout>