<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gis_test.ui.LoginPageFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginTop="200dp"
        android:textColor="@color/primaryButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/borderColor"
        android:textSize="25sp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/paragraphText"
        app:cursorColor="@color/paragraphText"
        app:hintTextColor="@color/paragraphText"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edt"
            android:backgroundTint="@color/textInputBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="@color/hints"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/borderColor"
        android:textSize="25sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/paragraphText"
        app:cursorColor="@color/paragraphText"
        app:hintTextColor="@color/paragraphText"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edt"
            android:backgroundTint="@color/textInputBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:autofillHints="password"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/hints"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/textColor"
        android:backgroundTint="@color/primaryButton"
        android:elevation="5dp"
        android:textStyle="bold"
        android:id="@+id/login_btn"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/if_you_haven_t_signed_up_yet"
        android:textColor="@color/paragraphText"
        android:layout_marginTop="30dp"
        android:textSize="15sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/textColor"
        android:backgroundTint="@color/secondaryButton"
        android:elevation="5dp"
        android:textStyle="bold"
        android:id="@+id/signup_btn"/>

</LinearLayout>