<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SecondSignUpFragment"
    tools:ignore="ScrollViewCount">


    <!-- כל התוכן נמצא בתוך LinearLayout אנכי -->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- מקום לתמונה או רווח למעלה -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <!-- שדה שם העסק -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/business_name"
                android:textSize="18sp" />
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/businessName_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:hint="@string/enter_business_name"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColorHint="@color/hints" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- שדה קטגוריית העסק -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="18sp"
                android:layout_marginTop="35dp" />
            <Space
                android:layout_width="130dp"
                android:layout_height="wrap_content" />
            <NumberPicker
                android:id="@+id/category_picker"
                android:layout_width="126dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:theme="@style/AppTheme.Picker"
                android:layout_gravity="end" />
        </LinearLayout>

        <!-- שדה שם הרחוב -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/street"
                android:textSize="18sp" />
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense">
                <AutoCompleteTextView
                    android:id="@+id/streetName_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_street_name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColorHint="@color/hints"
                    android:completionThreshold="1"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- שדה מספר רחוב -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/street_number"
                android:textSize="18sp" />
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/streetnumber_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_street_number"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textColorHint="@color/hints" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- שדה שעות פתיחה -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opening_hours"
                android:textSize="18sp"
                android:layout_marginTop="35dp"
                />
            <Space
                android:layout_width="60dp"
                android:layout_height="wrap_content"/>
            <NumberPicker
                android:id="@+id/open_hour_picker"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:theme="@style/AppTheme.Picker"
                android:layout_gravity="end" />
            <NumberPicker
                android:id="@+id/open_minute_picker"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:theme="@style/AppTheme.Picker"
                android:layout_gravity="end" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closing_hours"
                android:textSize="18sp"
                android:layout_marginTop="35dp" />
            <Space
                android:layout_width="65dp"
                android:layout_height="wrap_content"/>
            <NumberPicker
                android:id="@+id/close_hour_picker"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:theme="@style/AppTheme.Picker"
                android:layout_gravity="end" />
            <NumberPicker
                android:id="@+id/close_minute_picker"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:theme="@style/AppTheme.Picker"
                android:layout_gravity="end" />
        </LinearLayout>
        <!-- שדה תיאור העסק -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/businessDescEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/textboxbackground"
            android:padding="12dp"
            android:hint="@string/describe_your_business"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <!-- כפתור הרשמה -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:id="@+id/signup_btn" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

    </LinearLayout>

</ScrollView>
